<resources>
    <string name="app_name">Tasty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="your_name">Your Name</string>
    <string name="sign_up">Sign Up</string>


    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="biography">Biography</string>
    <string name="logout">Logout</string>
    <string name="btn_cansel">Cansel</string>
    <string name="btn_save">Save</string>
    <string name="sign_out_q">Do you want to sign out this account?</string>
    <string name="sing_out">Sign Out</string>
</resources>