<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LoginFragment"
    android:background="@color/white"
    android:layout_marginHorizontal="28dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_emailbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:startIconDrawable="@drawable/ic_email"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/l_etEmail"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arlrbbd"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_passbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/l_emailbox"
        android:layout_marginTop="28dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/yellow"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/l_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/arlrbbd"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_below="@id/l_passbox"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/back_select_login"
        android:fontFamily="@font/arlrbbd"
        android:gravity="center"
        android:padding="12dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColor="@color/white"
        />

</RelativeLayout>