<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_logout"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_out"
                    android:textSize="18sp"
                    android:fontFamily="@font/arlrbbd"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/question_delete"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_q"
                android:textSize="16dp"
                android:textColor="#737373"

                android:fontFamily="@font/arlrbbd"/>

            <LinearLayout
                android:layout_below="@id/question_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/s_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cansel"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/arlrbbd"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/btn_signout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_out"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/arlrbbd"
                    android:textColor="#F44336"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>