<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context="com.moadab.tasty.ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/dot_loading"
            android:fontFamily="@font/arlrbbd"
            >
            <ImageView
                android:id="@+id/mealThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:src="@drawable/shadow_bottom_to_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">
                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textCategory"
                            android:text="@string/category"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/yellow"
                            android:fontFamily="@font/arlrbbd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/category"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:fontFamily="@font/arlrbbd"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:background="@color/white"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/Country"
                            android:text="@string/country"
                            android:fontFamily="@font/arlrbbd"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/yellow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/country"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/arlrbbd"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/arlrbbd"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/instructions"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:background="@color/white"
                    android:id="@+id/instructions"
                    android:text="@string/dot_loading"
                    android:fontFamily="@font/arlrbbd"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/arlrbbd"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/Ingredients"
                        android:textColor="@color/yellow" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/ingredient"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/arlrbbd"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/measure"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/arlrbbd"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="20dp">
                <RelativeLayout
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableStart="@drawable/ic_youtube"
                        android:drawableLeft="@drawable/ic_youtube"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/arlrbbd"
                        android:focusable="true"
                        android:background="@drawable/button_back"
                        android:gravity="center_vertical"
                        android:padding="14dp"
                        android:text="@string/youtube"
                        android:textColor="#EC2D2D"
                        android:textSize="16sp" />
                </RelativeLayout>
                <RelativeLayout
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/source"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/back_tab_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/arlrbbd"
                        android:textColor="@color/yellow"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_link"
                        android:drawableStart="@drawable/ic_link" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>